--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -996,3 +996,22 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Title = {Distributed Description Logics: Assimilating Information from Peer Sources},
 	Volume = {1},
 	Year = {2003}}
+
+@TECHREPORT{uml-2.5,
+  AUTHOR = {OMG},
+  TITLE = {{Unified Modeling Language, Version 2.5}},
+  TYPE = {Specification},
+  INSTITUTION = {Object Management Group},
+  NUMBER = {formal/2015-03-01},
+  YEAR = {2015}
+}
+
+@TECHREPORT{uml-2.4.1-super,
+  AUTHOR = {OMG},
+  TITLE = {{Unified Modeling Language Superstructure, Version 2.4.1}},
+  TYPE = {Specification},
+  INSTITUTION = {Object Management Group},
+  NUMBER = {formal/2011-08-06},
+  YEAR = {2011}
+}
+
