Fix example: `library Algebra`
Change explanation:

  - `syntax` keyword changed to `serialization`: this is what the
    standard dictates; `syntax` is no longer used
  - `equivalence e : BooleanAlgebra ...`:

    - the syntax used was clearly not CLIF and I wasn't able to figure
      out what to use, so I rewrote the example equivalence to be valid
      CASL and prepended a `language lang:CASL` declaration to make it
      work; the upside is that the unicode symbols work, except for the
      `<->` variant for which the standard doesn not specify a unicode
      version.
    - there was a dot in the entailment where a colon should be placed
      and I removed a trailing whitespace.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11056,7 +11056,7 @@ end
 
 library Algebra
 
-language lang:CommonLogic syntax ser:CommonLogic/CLIF
+language lang:CommonLogic serialization ser:CommonLogic/CLIF
 
 spec implicit_group =
 (forall (x y z)
@@ -11086,13 +11086,17 @@ end
 \end{lstlisting}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,in,approximate,extract,equivalence,spec},escapechar=@,mathescape]
-equivalence e : algebra:BooleanAlgebra
-                $\leftrightarrow$ algebra:BooleanRing =
-    x$\wedge$y = x$\cdot$y
-    x$\vee$y = x+y+x$\cdot$y
-    $\neg$x = 1+x
-    x$\cdot$y = x$\wedge$y
-    x+y = (x$\vee$y) $\wedge$ $\neg$(x$\wedge$y)
+language lang:CASL
+
+equivalence e : algebra:BooleanAlgebra <-> algebra:BooleanRing =
+  sort E
+  forall x,y:E
+  . x∧y = x·y
+  . x$\wedge$y = x$\cdot$y
+  . x$\vee$y = x+y+x$\cdot$y
+  . $\neg$x = 1+x
+  . x$\cdot$y = x$\wedge$y
+  . x+y = (x$\vee$y) $\wedge$ $\neg$(x$\wedge$y)
 end
 \end{lstlisting}
 
@@ -11108,8 +11112,8 @@ spec InterpolatedGroup =
   forget inv
 end
 
-entailment ent = InterpolatedGroup 
-  entails { . forall x:Elem . exists y . Elem . x+y=0 }
+entailment ent = InterpolatedGroup
+  entails { . forall x:Elem . exists y : Elem . x+y=0 }
 end
 \end{lstlisting}
 
