Fix example: `library Alignments`
Changes:

  - change `syntax` to `serialization`
  - remove trailing whitespace

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10914,7 +10914,7 @@ end
 
 library Alignments
 
-language lang:OWL2 logic log:SROIQ syntax ser:OWL2/Manchester
+language lang:OWL2 logic log:SROIQ serialization ser:OWL2/Manchester
 
 alignment Alignment1 : { Class: Woman } to { Class: Person } =
   Woman < Person
@@ -10945,7 +10945,7 @@ end
 network N =
   1:Onto1, 2:Onto2, VAlignment
 end
- 
+
 ontology VAlignedOntology =
   combine N
   %% 1:Person is identified with 2:HumanBeing
