--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9857,9 +9857,8 @@ As stated above, models (in the sense of the term \termref{model} defined in
 clause~\ref{terms-and-defs}) of UML class diagrams are obtained 
 via a translation to Common Logic.
 
-For a classifier net
-$\Sigma = ((C, {\leq_C}), K, P, M, A)$, a Common Logic theory
-$CL(\Sigma)$ is defined consisting of:
+For a classifier net $\Sigma = ((C, {\leq_C}), P, O, A)$,
+a Common Logic theory $\CL(\Sigma)$ is defined consisting of:
 %
 \begin{itemize} % [topsep=0pt, label=--, leftmargin=*]
   \item for $c \in C$,
@@ -9867,152 +9866,193 @@ a predicate\footnote{Strictly speaking, this is just a name.} $\CL(c)$,
 such that
 %\ednote{class predicates should be restricted to be unary} 
 \begin{itemize} % [topsep=0pt, label=--, leftmargin=*]
-\item 
-  $\CL(\mathsf{Boolean}) = \texttt{buml:Boolean}$, 
-\item 
-  $\CL(\mathsf{String}) = \texttt{buml:String}$,
-\item 
-  $\CL(\mathsf{Integer}) = \texttt{buml:Integer}$,
-\item 
-  $\CL(\mathsf{UnlimitedNatural}) = \texttt{form:NaturalNumber}$,
-\item 
-  $\CL(\mathsf{Real}) = \texttt{buml:Real}$,
-\item 
-  $\CL(\mathsf{c}) = c$, if $c$ is an enumeration type with values $k_1,\ldots,k_n$. In this case, additionally, the Common Logic theory is augmented by
-\texttt{(not (= $k_i$ $\cdots$ $k_j$))} for $i\neq j$ and
-\texttt{(forall (x) (if (c x) (or (= x $k_1$) $\cdots$ (= x $k_n$))))},
+  \item $\CL(\mathsf{Boolean}) = \texttt{buml:Boolean}$,
+
+  \item $\CL(\mathsf{String}) = \texttt{buml:String}$,
+
+  \item $\CL(\mathsf{Integer}) = \texttt{buml:Integer}$,
+
+  \item $\CL(\mathsf{UnlimitedNatural}) = \texttt{form:NaturalNumber}$,
+
+  \item $\CL(\mathsf{Real}) = \texttt{buml:Real}$,
+
+  \item $\CL(c) = c$,
+if $c$
+is an enumeration type with values $k_1, \ldots, k_n$.
+In this case, additionally, the Common Logic theory is augmented by
+%
+\begin{lstlisting}[language=clif, mathescape, escapechar=@]
+(not (= $k_i$ $k_j$))} @\normalfont for $i \neq j$@
+(forall (x) (if ($\CL(c)$ x) (or (= x $k_1$) $\cdots$ (= x $k_n$))))
+\end{lstlisting}
 %\ednote{Ed Seidewitz:
 %enumerations are specializable, but this is type-unsafe, so maybe omit it}
-\item 
-  $\CL(\mathsf{List}[c]) = \texttt{form:Sequence}$,
-\item 
-  $\CL(\mathsf{Set}[c]) = \texttt{form:Set}$,
-\item 
-  $\CL(\mathsf{OrderedSet}[c]) = \texttt{form:OrderedSet}$,
-\item 
-  $\CL(\mathsf{Bag}[c]) = \texttt{form:Bag}$,
-\item 
-  $\CL(\mathsf{c}) = c$, if $c$ a class name which is not one of the above. 
+
+  \item $\CL(\mathsf{List}[c]) = \CL(\mathsf{List}) = \texttt{form:Sequence}$,
+
+  \item $\CL(\mathsf{Set}[c]) = \CL(\mathsf{Set}) = \texttt{form:Set}$,
+
+  \item $\CL(\mathsf{OrderedSet}[c]) = \CL(\mathsf{OrderedSet}) = \texttt{form:OrderedSet}$,
+
+  \item $\CL(\mathsf{Bag}[c]) = \CL(\mathsf{Bag}) = \texttt{form:Bag}$,
+
+  \item $\CL(c) = c$,
+if $c$ a class name which is not one of the above.
 \end{itemize}
-\item for each relation $c_1
-  \leq_C c_2$, an axiom \texttt{(forall (x) (if ($C_1$ x) ($C_2$ x)))},
-  where $C_1 = \CL(c_1)$, $C_2 = \CL(c_2)$, 
+
+  \item for each relation $c_1 \leq_C c_2$, an axiom %
+\lstinline[language=clif, mathescape]!(forall (x) (if ($\CL(c_1)$ x) ($\CL(c_2)$ x)))!
 
 %  \item $\CL$ maps each instance specification declaration ${k : c} \in K$ to constant $\CL(k)$ and an axiom
 %\texttt{(c k)}, where by abuse of notation, we identify $c$ with $\CL(c)$, and $k$ with $(\CL(k))$ (this abuse of notation will also be used in the sequel);
 %  \item for the set of instance specifications $k_1 : c_1, \ldots, k_n : c_n$  an axiom \texttt{(different $k_1$ $\cdots$ $k_n$)} (the unique name assumption);
-  \item $\CL$ maps each attribute declaration $c.p : \tau[c'] \in P$ to a predicate $\CL(c.p)$ and axioms stating type-correctness
-and functionality:\ednote{shouldn't attributes involving Set only also
-be represented in a simplified way?}
-\begin{itemize}
-\item
-\texttt{(forall (x y) (if (c.p x y) (c x))) }
-  \item
-\texttt{(forall (x y) (if (c.p x y) ($\tau[c']$ $y$))) }\footnote{\texttt{($\tau[c]$ x)} is an abbreviation of either (if $\tau$ is present)\\
-  \texttt{(and ($\tau$ x) (forall (m) (if (from:$\tau$-member m x) (c' m))))}.\\
-  or (if $\tau$ is omitted) just \texttt{(c x)}.}
-%% \item 
-%% \texttt{(forall (x y m)\\
-%% \qqquad (if (and (c.p x y) (member m y)) (c' m)))}
-\item 
-\texttt{(forall (x)\\
-\qqquad  (if (c x) (exists (y) (c.p x y))))}
-\item 
-\texttt{(forall (x y z)}\\
-\qqquad \texttt{(if (and (c.p x y) (c.p x z))}\\
-\qqquad\qqquad\texttt{(= y z)))}
-\end{itemize}
-  \item $\CL$ maps each query operation declaration $c.q(x_1 :
-    \tau_1[c_1], \dots, x_r : \tau_n[c_r]) : \tau[c'] \in O$ to a
-    predicate $\CL(c.q)$ and axioms stating type-correctness and
-    functionality:
-\begin{itemize}
-\item
-\texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y) (if (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ y) ($c$ $x$))) }
-\item 
-\texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y) (if (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ y) ($\tau_i[c_i]$ $x_i$))) }
-for each $i=1\ldots n$,\footnote{Note that the $\cdots$ here is meta notation, not a sequence marker.}
-\item 
-\texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y) (if (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ y) ($\tau[c']$ $y$))) }
+  \item $\CL$
+maps each attribute declaration $c.p : \tau[c'] \in P$
+to a predicate $\CL(c.p)$
+and axioms stating type-correctness and functionality:\ednote{shouldn't
+  attributes involving Set only also be represented in a simplified
+  way?}
+%
+\begin{lstlisting}[language=clif, mathescape, escapechar=@]
+  (forall (x y) (if ($\CL(c.p)$ x y) ($\CL(c)$ x)))
+  (forall (x y) (if ($\CL(c.p)$ x y) ($\tau[c']$ y)))@ \footnotemark@
+  (forall (x) (if ($\CL(c)$ x) (exists (y) ($\CL(c.p)$ x y))))
+  (forall (x y z) (if (and ($\CL(c.p)$ x y) ($\CL(c.p)$ x z)) (= y z)))
+\end{lstlisting}%
+\footnotetext{\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($\tau[c^\prime]\ $ y)! is an abbreviation of either
+\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!(and ($\mathsf{CL}(\tau)\ $ y) (forall (m) (if (from:$\mathsf{CL}(\tau)$-member m y) ($\mathsf{CL}(c^\prime)\ $ m))))! (if $\tau$ is present)
+or just \lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($c^\prime\ $ y)! (if $\tau$ is omitted).}
+
+  \item $\CL$
+maps each query operation declaration
+$c.q(x_1 : \tau_1[c_1], \dots, x_r : \tau_n[c_r]) : \tau[c'] \in O$
+to a predicate $\CL(c.q)$
+and axioms stating type-correctness and functionality:
+%
+\begin{lstlisting}[language=clif, mathescape, escapechar=@]
+  (forall (x x$_1$ x$_2$ $\cdots$ x$_n$ y) (if ($\CL(c.q)$ x x$_1$ x$_2$ $\cdots$ x$_n$ y) ($\CL(c)$ x)))
+  (forall (x x$_1$ x$_2$ $\cdots$ x$_n$ y) (if ($\CL(c.q)$ x x$_1$ x$_2$ $\cdots$ x$_n$ y) ($\tau_i[c_i]$ x$_i$))) @\normalfont\quad for each $i = 1, \ldots, n$ \footnotemark@
+  (forall (x x$_1$ x$_2$ $\cdots$ x$_n$ y) (if ($\CL(c.q)$ x x$_1$ x$_2$ $\cdots$ x$_n$ y) ($\tau[c']$ $y$)))
+  (forall (x x$_1$ x$_2$ $\cdots$ x$_n$ y z)
+          (if (and ($\CL(c.q)$ x x$_1$ x$_2$ $\cdots$ x$_n$ y) ($\CL(c.q)$ x x$_1$ x$_2$ $\cdots$ x$_n$ z))
+              (= y z)))
+\end{lstlisting}%
+\footnotetext{Note that the $\cdots$
+  here is meta notation, not a sequence marker.}
+%
 %% \item 
 %% \texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y m)\\
 %% \qqquad (if (and (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ y) (member m y)) (c' m)))}
-\item 
-\texttt{(forall (x $x_1$ $x_2$ $\cdots$  $x_n$ y z)}\\
-\qqquad \texttt{(if (and (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ y) (c.q x $x_1$ $x_2$ $\cdots$  $x_n$ z))}\\
-\qqquad\qqquad\texttt{(= y z)))}
-\end{itemize}
-{Query operations are modeled as partial
-functions: they may be undefined for certain arguments due to
-violation of multiplicity constraints.}
-  \item \CL maps each composition declaration $m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2]) \in M$ to
-a constant $\CL(m)$ and axioms stating that $\CL(m)$ is a finite
-binary relation represented as a sequence of pairs of the
-correct type:
-\begin{lstlisting}[language=clif,morekeywords={then,with}]
-(from:Sequence m)
-(forall (p) (if (form:sequence-member p m)
-                (and (form:Pair p) (c1 (form:first p)) (c2 (form:second p))))
-\end{lstlisting}
-In case $\tau_2$ is not present or $\tau_2=\mathsf{Set}$, this is simplified to a binary relation directly represented as a binary predicate:\\
-\texttt{(forall (x y) (if (m x y) (and ($c_1$ x) ($c_2$ y))))}\\
-  \item 
-\ednote{todo: define ownership by a big disjuction over all
-composition delcarations and composite attributes.  each instance has at most one owner: We say that $o$ is
-+an owner of $o'$ in $\mathcal{I}$ if
-+$o' \in P^{\mathcal{I}}(c\composition p : \tau[c'])(o)$ or
-+$o' \in M^{\mathcal{I}}(m(p_1 : \mathsf{Set}[c_1], \composition p_2 :
-+\tau_2[c_2]).p_2)(o)$.
-+If $o_1$ and $o_2$ are owners of $o'$ in $\mathcal{I}$, then
-+$o_1 = o_2$;}
-for any composition declarations $m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2]), m'(p'_1 : \mathsf{Set}[c'_1], \composition p'_2 : \tau'_2[c'_2]) \in M$, an axiom stating ``each instance has
-at most one owner'':
-\begin{lstlisting}[language=clif,morekeywords={then,with}]
-(forall (o o' i)
-        (if (and (form:sequence-member (form:pair o i) m)
-                 (form:sequence-member (form:pair o' i) m'))
-            (= o o')))
-\end{lstlisting}
-In case \texttt{m} is represented in the simplified way, \texttt{(form:sequence-member (form:pair o i) m)} is replaced by \texttt{(m o i)}, and analogously for \texttt{m'}.
-  \item \CL maps each association declaration
-$a(p_1 : \tau_1[c_1], \ldots, p_r : \tau_r[c_r])\in A$
+Query operations are modeled as partial functions: they may be undefined
+for certain arguments due to violation of multiplicity constraints.
+
+%   \item \CL maps each composition declaration
+% $m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2]) \in M$
+% to a constant $\CL(m)$
+% and axioms stating that $\CL(m)$
+% is a finite binary relation represented as a sequence of pairs of the
+% correct type:
+% %
+% \begin{lstlisting}[language=clif, mathescape]
+% (from:Sequence $\CL(m)$)
+% (forall (p) (if (form:sequence-member p $\CL(m)$)
+%                 (and (form:Pair p) ($\CL(c_1)$ (form:first p)) ($\CL(c_2)$ (form:second p))))
+% \end{lstlisting}
+% %
+% In case $\tau_2$ is not present or $\tau_2 = \mathsf{Set}$, this is simplified to a binary relation directly represented as a binary predicate:
+% %
+% \begin{lstlisting}[language=clif, mathescape]
+% (forall (x y) (if ($m$ x y) (and ($c_1$ x) ($c_2$ y))))
+% \end{lstlisting}
+% 
+%   \item \ednote{todo: define ownership by a big disjuction over all
+%   composition delcarations and composite attributes.  each instance has
+%   at most one owner: ``we say that $o$
+%   is an owner of $o'$
+%   in $\mathcal{i}$
+%   if $o' \in p^{\mathcal{i}}(c\composition p : \tau[c'])(o)$
+%   or
+%   $o' \in m^{\mathcal{i}}(m(p_1 : \mathsf{set}[c_1], \composition p_2 :
+%   \tau_2[c_2]).p_2)(o)$.  if $o_1$
+%   and $o_2$
+%   are owners of $o'$
+%   in $\mathcal{i}$,
+%   then $o_1 = o_2$;}
+% for any composition declarations
+% $m(p_1 : \mathsf{set}[c_1], \composition p_2 : \tau_2[c_2]), m'(p'_1 :
+% \mathsf{set}[c'_1], \composition p'_2 : \tau'_2[c'_2]) \in m$, an axiom
+% stating ``each instance has at most one owner'':
+% %
+% \begin{lstlisting}[language=clif, mathescape]
+% (forall (o o' i)
+%         (if (and (form:sequence-member (form:pair o i) $m$)
+%                  (form:sequence-member (form:pair o' i) $m'$))
+%             (= o o')))
+% \end{lstlisting}
+% %
+% in case $m$ is represented in the simplified way,
+% \lstinline[language=clif, mathescape]!(form:sequence-member (form:pair o i) $m$)!
+% is replaced by \lstinline[language=clif, mathescape]!($m$ o i)!, and analogously for $m'$.
+
+  \item $\CL$ maps each association declaration
+$a(p_1 : \tau_1[c_1], \ldots, p_r : \tau_r[c_r])\in a$
 to a predicate $\CL(a)$
 and axioms stating that $\CL(a)$
 is a finite relation represented as a sequence of tuples of the correct
 types (the latter again being represented as
-sequences)\footnote{Ignoring the annotations $\tau_i$
+sequences)\footnote{ignoring the annotations $\tau_i$
   in the interpretation of an association is
-  intentional~\cite[p.~197]{uml-2.5}: ``A link is a tuple with one value
-  for each \uml{memberEnd} of the Association, where each value is an
+  intentional~\cite[p.~197]{uml-2.5}: ``a link is a tuple with one value
+  for each \uml{memberend} of the association, where each value is an
   instance whose type conforms to or implements the type of the end.
-  [\ldots] When one or more ends of the Association have
-  $\uml{isUnique} = \mathit{false}$,
+  [\ldots] when one or more ends of the association have
+  $\uml{isunique} = \mathit{false}$,
   it is possible to have several links associating the same set of
   instances. In such a case, links carry an additional identifier apart
   from their end values.  When one or more ends of the Association are
   ordered, links carry ordering information in addition to their end
   values.'' The additional information required for links is covered by
-  using sequences of tuples.}:\\
-\texttt{(from:Sequence a)}\\
-\texttt{(forall (t) (if (form:sequence-member t a)\\
-  \qqquad\qqquad  (exists ($x_1$ $\cdots$ $x_r$)\\
-  \qqquad\qqquad\qqquad\ \  (and ($c_1$ $x_1$) $\cdots$ ($c_r$ $x_r$)\\
-  \ \ \  (= t (form:sequence-insert $x_1$ ($\cdots$ (form:sequence-insert\\
-  \qqquad\qqquad\qqquad\ \ $x_r$ form:empty-sequence))))))))}
+  using sequences of tuples.}:
+%
+\begin{lstlisting}[language=clif, mathescape]
+(from:Sequence $\CL(a)$)
+(forall (t)
+        (if (form:sequence-member t $\CL(a)$)
+            (exists (x$_1$ $\cdots$ x$_r$)
+                    (and ($\CL(c_1)$ $x_1$) $\cdots$ ($\CL(c_r)$ x$_r$)
+                         (= t (form:sequence-insert x$_1$ ($\cdots$
+                              (form:sequence-insert x$_r$ form:empty-sequence))))))))
+\end{lstlisting}
 
 In case that all the $\tau_i$ are omitted (or, equivalently, equal to 
-$\mathsf{Set}$), the representation is simplified to an $n$-ary predicate:\\
-\texttt{(forall ($x_1$ $x_2$ $\cdots$  $x_n$) (if (a $x_1$ $x_2$ $\cdots$  $x_n$) (and ($c_1$ $x_1$) $\cdots$ ($c_n$ $x_n$))))}
+$\mathsf{Set}$), the representation is simplified to an $n$-ary predicate:
+%
+\begin{lstlisting}[language=clif, mathescape]
+(forall (x$_1$ x$_2$ $\cdots$ x$_n$)
+        (if ($\CL(a)$ x$_1$ x$_2$ $\cdots$ $_xn$) (and ($\CL(c_1)$ x$_1$) $\cdots$ ($\CL(c_n)$ $x_n$))))
+\end{lstlisting}
+%
 \item the interpretation of a member end of a binary association
 declaration owned by a class/data type coincides with the interpretation
 of the attribute: if for $i\in\{1,2\}$, $\mathbf{a}.p_i : \tau_i[c_i]$ for
 $\mathbf{a} = a(p_1 : \tau_1[c_1], p_2 : \tau_2[c_2]) \in A$ is owned by
-$c \in C$ with $c.p_i : \tau_i[c_i] \in P$, then\\
-\texttt{(forall (o s)\\
-\qqquad (if (c.p o s) (= s (form:seq2$\tau_i$ (form:select$i$ o a)))))}\\
-If $\mathbf{a}$ is represented in simplified form, then instead the following is used \\
-\texttt{(forall (o s)\\
-\qqquad (if (c.p o s) (forall (x) (iff (member x s) (a o x)))))}
+$c \in C$ with $c.p_i : \tau_i[c_i] \in P$, then
+%
+\begin{lstlisting}[language=clif,escapechar=@]
+(forall (o s)
+        (if (c.p o s)
+            (= s (form:seq2@$\tau_i$@ (form:select@$i$@ o a)))))
+\end{lstlisting}
+%
+If $\mathbf{a}$ is represented in simplified form, then instead the
+following is used
+%
+\begin{lstlisting}[language=clif,escapechar=@]
+(forall (o s)
+        (if (c.p o s)
+            (forall (x) (iff (member x s) (a o x)))))
+\end{lstlisting}
+%
 \item the interpretation of a member end of a composition
 declaration\ednote{Adapt to the definition of composition declarations
   as a special case of association declarations.}  owned by a class/data
@@ -10022,11 +10062,21 @@ $\mathbf{m}.p : \tau_i[c_i]$
 for
 $\mathbf{m}=m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2])
 \in M$ is owned by $c \in C$ with $c.p : \tau_i[c_i] \in P$, then
-\texttt{(forall (o s)\\
-  \qqquad (if (c.p o s) (= s (form:seq2$\tau_i$ (form:select$i$ o m)))))}\\
-Again, if $\mathbf{m}$ is represented in simplified form, then the following is used\\
-\texttt{(forall (o s)\\
-  \qqquad (if (c.p o s) (forall (x) (iff (member x s) (m o x)))))}
+%
+\begin{lstlisting}[language=clif,escapechar=@]
+(forall (o s)
+        (if (c.p o s)
+            (= s (form:seq2@$\tau_i$@ (form:select@$i$@ o m)))))
+\end{lstlisting}
+%
+Again, if $\mathbf{m}$ is represented in simplified form, then the following is used
+%
+\begin{lstlisting}[language=clif,escapechar=@]
+(forall (o s)
+        (if (c.p o s)
+            (forall (x)
+                    (iff (member x s) (m o x)))))
+\end{lstlisting}
 %% \footnote{
 %% Ignoring the annotations $\tau_i$ in the interpretation of an
 %% association is intentional, see the semantics of associations in the UML
