added condition on network refinements

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3667,6 +3667,8 @@ The network in Fig.~\ref{fig:simple-network} can be refined
 to a network that is closer to implementation.
 This amounts to refining the specifications of the network
 individually, see Fig.~\ref{fig:simple-network-refinement}.
+This needs to be done in such a way that both the refinement of \syntax{Int} 
+and that of \syntax{List} are to built over the refinement of \syntax{Nat}.
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
 spec IntBin = NatBin then ...
 end
@@ -4917,6 +4919,9 @@ each node in the source network (the OMS refinement is then required
 to refine the node in the source network to some node in the target
 network). The list may also include network refinements, much in the
 same way as network definitions also may include other networks.
+All the ordinary refinements occuring as components of the
+network refinement have to be compatible in a sense exemplified
+at the end of clause~\ref{spec-2}.
 
 \medskip
 \begin{figure}
