--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3809,7 +3809,7 @@ UML models, which naturally form a network. Coherence of this network
 is expressed as its consistency. 
 It is assumed that XMI representations of the
 relevant UML models have been stored at
-\url{http://www.example.org/uml/} in a single xmi-file that contains a \textt{uml:Model} element for each UML model whose \texttt{xmi:id} has a prefix \textt{xxx} followed by an underscore. \text{xxx} is determined as follows:\medskip
+\url{http://www.example.org/uml/} in a single xmi-file that contains a \texttt{uml:Model} element for each UML model whose \texttt{xmi:id} has a prefix \texttt{xxx} followed by an underscore. \text{xxx} is determined as follows:\medskip
 
 \begin{tabular}{|l|l|l|}\hline
 \textbf{Figure} & \textbf{\texttt{xxx}} & \textbf{diagram type}\\\hline
