Surround anonymous basic spec with curly braces
They are now mandatory as of the current version of the DOL standard and
the specified concrete syntax.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3863,7 +3863,7 @@ end
 ontology BigTaxonomy = <https://ontohub.org/ATM/mytaxonmy.owl> end
 
 ontology NoLivestockTaxonomy = BigTaxonomy reject
-                               Class: Livestock
+                               { Class: Livestock }
 end
 
 ontology ExtendedTaxonomy = NoLivestockTaxonomy then
